styles/styles.css
/* ... */
main .section.white-text h1 {
    color: white;
}

main .section.small-heading h1 {
    font-size: 1.9rem;
    text-transform: uppercase;
}

.breathing-room main .section.small-heading h1 {
    font-size: var(--heading-font-size-m);
}

@media (min-width: 900px) {
    .breathing-room main .section.small-heading h1 {
        font-size: 1.9rem;
    }

    main .section.centered a.button:any-link {
        margin: auto;
    }
}

main .section.green-accent .default-content-wrapper em {
    color: var(--color-green);
    font-style: normal;
    font-weight: 500;
}

main .section.green-accent .default-content-wrapper em u {
    font-family: var(--gotham-light-font-family);
    color: var(--color-white);
    text-decoration: none;
}

main .section.isi {
    font-size: 1.5rem;
    line-height: 1;
}

.what-is-copd h2
{
    font-size: var(--body-font-size-xl);
}

main .section.isi h2 {
    font-size: var(--heading-font-size-s);
    font-weight: 500;
    color: var(--text-orange);
    margin-bottom: 20px;
}

main div:not(.isi) .default-content-wrapper h2 {
    font-size: 2rem;
}

main .section.accordion-2-container.video-container h2 {
    font-size: var(--heading-font-size-xxl);
}

.what-is-copd div.boxes.block > div h2 {
    font-size: var(--body-font-size-xl);
}

.copd-stages-page div.boxes.block div h2 {
    margin: 0;
    font-size: 1.4rem;
    line-height: 15px;
    font-weight: 500;
}

main .section.accordion-2-container.video-container .accordion-2 h2 {
    font-size: 1.4rem;
}

@media (min-width: 900px) {
    main .section.accordion-2-container.video-container .accordion-2 h2 {
        font-size: 1.8rem;
    }
}

@media (min-width: 900px) {
    main .section.isi h2 {
        font-size: var(--heading-font-size-ml);
    }
}

main div:not(.isi) li {
    margin-top: 12px;
    margin-bottom: 12px;
}

main .section.isi ul {
    padding: 4px 0 11px 20px;
}

main .section.isi ul li ul {
    padding: 0 0 0 20px;
}

main .section.isi li {
    margin: 8px 0;
}

main .section.isi strong {
    font-weight: 500;
}

/* Separator icon */
main span.icon-separator hr {
    width: 40px;
    border-width: 2px;
}

main .section.image-float-left picture {
    float: left;
    margin-right: 20px;
}

main .section.background-gray {
    background: var(--color-gray-message-background);
}

main .section.small-vertical-margins {
    padding-top: 12px;
    padding-bottom: 12px;
}

@media (min-width: 600px) {
    main .section.font-large .default-content-wrapper {
        font-size: 2.1rem;
    }

    main .section.centered.font-large .default-content-wrapper p {
        padding-left: 80px;
        padding-right: 80px;
    }
}

.copd-treatment .columns-row {
    position: relative;
    padding-bottom: 125px;
}

.copd-treatment .columns-80-20 .columns-row {
    padding-bottom: unset;
}

.copd-treatment .columns-row:last-of-type {
    margin-bottom: -25px;
}

.copd-treatment .columns-80-20 {
    color: var(--link-color);
    font-size: var(--body-font-size-xl);
}

.copd-treatment .columns-60-40 .columns-img-col {
    order: 3;
}

@media (min-width: 900px) {
    .copd-treatment .columns-60-40 .columns-img-col {
        order: unset;
    }

    .copd-treatment .columns-row {
        position: unset;
        padding-bottom: unset;
    }

    .copd-treatment .columns-row:last-of-type {
        margin-bottom: unset;
    }

    .copd-treatment .columns .button-container {
        position: unset;
        width: unset;
        margin-top: 20px;
    }

    .copd-treatment .columns .button-container a {
        margin-top: 6px;
    }

    .breathing-room main .section span.icon-separator hr {
        display: none;
    }
}

main .section.hero-container + .section {
    padding-top: 32px;
}

.getting-started main .section:nth-of-type(6) {
    background-image: url('../images/bg-section-2.png');
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.copd-resources main .section.hero-container + .section {
    padding-top: 32px;
}

@media (min-width: 900px) {
    .copd-resources main .section.hero-container + .section {
        padding-top: 0;
    }
}

.section.copd-treatment-goals > .default-content-wrapper li{
    margin-top: 5px;
    margin-bottom: 5px;
}

.copd-resources main div:not(.isi) .default-content-wrapper li {
    margin-bottom: 15px;
}

.copd-resources main .button-container a::after {
    content: "";
    display: inline-block;
    width: 20px;
    height: 20px;
    background: url("/icons/icon_pink-arrow-right-md.png") no-repeat;
    background-size: contain;
    margin-left: 15px;
}

.copd-resources main .section.isi .button-container a::after {
    display: none;
}

.what-is-copd .default-content-wrapper {
    padding: 0 12px;
    max-width: 635px;
    text-align: left;
}

.what-is-copd span.icon-separator hr {
    width: 82%;
}

.section.copd-treatment-intro > .default-content-wrapper,
.section.copd-treatment-goals > .default-content-wrapper,
.section.copd-treatment-options > .default-content-wrapper{
    font-size: 1.4rem;
}

.what-is-copd .default-content-wrapper:first-of-type {
    margin-bottom: 28px;
}

main .section:not(.isi) .default-content-wrapper {
    font-size: var(--body-font-size-s);
}

@media (min-width: 900px) {
    main .section:not(.isi) .default-content-wrapper {
        font-size: var(--body-font-size-m);
    }
}

.copd-resources main div:not(.isi) .default-content-wrapper,
.getting-started main div:not(.isi) .default-content-wrapper {
    line-height: 1.2em;
    font-size: 1.4rem;
}

.section.copd-treatment-goals {
    margin: 0 16px;
    border-top: 1px solid var(--color-grey-5);
    border-bottom: 1px solid var(--color-grey-5);
}

.section > .default-content-wrapper.back-to-top-wrapper {
    content: "";
    min-height: 30px;
    position: relative;
    max-width: 830px;
}
/* ... */

